--- a/assets/styles/index.scss
+++ b/assets/styles/index.scss
@@ -1,5 +1,10 @@
-@import "./layouts/about" @import "./layouts/contact-me" @import
-  "./layouts/footer" @import "./layouts/header" @import "./layouts/mail" @import
-  "./layouts//projects" @import "./layouts//service" @import
-  "./layouts//settings" @import "./layouts//skills" @import
-  "./layouts//testimonial";
+@import "./layouts/settings";
+@import "./layouts/header";
+@import "./layouts/about-me";
+@import "./layouts/competence";
+@import "./layouts/service";
+@import "./layouts/projects";
+@import "./layouts/mail";
+@import "./layouts/testimonial";
+@import "./layouts/contact-me";
+@import "./layouts/footer";
