--- a/assets/styles/index.css
+++ b/assets/styles/index.css
@@ -1,1 +1,293 @@
-/*# sourceMappingURL=index.css.map */
+@charset "UTF-8";
+@font-face {
+  font-family: roboto;
+  src: url(../fonts/Roboto-Regular.ttf);
+}
+@font-face {
+  font-family: montserrat;
+  src: url(../fonts/Montserrat-Regular.ttf);
+}
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+li {
+  list-style: none;
+}
+
+html {
+  scroll-behavior: smooth;
+}
+
+body {
+  background: rgba(3, 0, 0, 0.86);
+  max-width: 1100px;
+  margin: 0 auto;
+}
+
+a,
+a:visited {
+  color: rgba(237, 237, 237, 0.814);
+}
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  font-family: montserrat, sans-serif;
+}
+
+p,
+li,
+a {
+  font-family: roboto, sans-serif;
+}
+
+h2 {
+  letter-spacing: 1.1px;
+  color: white;
+  padding-bottom: 10px;
+}
+
+p {
+  color: rgba(237, 237, 237, 0.814);
+}
+
+header {
+  height: 100vh;
+}
+header nav nav-container {
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-pack: justify;
+      justify-content: space-between;
+  -ms-flex-align: center;
+      align-items: center;
+  margin: 30px 0;
+}
+header nav nav-container h2 {
+  color: white;
+  font-size: 1.2rem;
+}
+header nav nav-container .right {
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-pack: distribute;
+      justify-content: space-around;
+  -ms-flex-align: center;
+      align-items: center;
+}
+header nav nav-container .right li {
+  padding: 0 20px;
+}
+header nav nav-container .right li a {
+  text-decoration: none;
+}
+header nav nav-container .right li i {
+  color: rgba(237, 237, 237, 0.814);
+}
+header nav header-container {
+  display: grid;
+  grid-template-columns: 10% 40% 50%;
+  -ms-flex-align: center;
+      align-items: center;
+  margin-top: 150px;
+}
+header nav header-container .social ul li {
+  padding: 5px 0;
+}
+header nav header-container .social ul li a {
+  display: inline-block;
+}
+header nav header-container .picture img {
+  width: 100%;
+  border-radius: 10px;
+}
+header nav header-container .presentation {
+  margin-left: 50px;
+}
+header nav header-container .presentation h1 {
+  color: white;
+  padding-bottom: 10px;
+  line-height: 1.3;
+  font-family: montserrat;
+}
+header nav header-container .presentation p {
+  color: rgba(237, 237, 237, 0.814);
+  padding-bottom: 10px;
+}
+header nav header-container .presentation .key2 {
+  line-height: 1.5;
+}
+header nav header-container .presentation .link .link-container {
+  margin-top: 20px;
+}
+header nav header-container .presentation .link .link-container a {
+  text-decoration: none;
+  border: 1px solid transparent;
+  padding: 10px;
+  letter-spacing: 1.3px;
+  background: rgba(237, 237, 237, 0.18);
+  border-radius: 5px;
+}
+header nav .down {
+  text-align: center;
+  margin-top: 150px;
+}
+header nav .down p {
+  color: rgba(237, 237, 237, 0.814);
+  text-decoration: underline;
+  text-underline-offset: 6px;
+}
+
+.about-me .about-me-container {
+  margin-bottom: 40px;
+  text-align: center;
+}
+.about-me .about-me-container h2 {
+  color: white;
+  padding-bottom: 10px;
+}
+.about-me .about-me-container p {
+  color: rgba(237, 237, 237, 0.814);
+}
+.about-me .about-contain {
+  display: grid;
+  grid-template-columns: 50% 50%;
+  margin: 20px;
+}
+.about-me .about-contain .left-image {
+  background: url(../img/computer.jpg) center/cover;
+  height: 300px;
+  width: 90%;
+  margin: 0 auto;
+}
+.about-me .about-contain .right-text {
+  margin-left: 20px;
+  place-self: center;
+  color: rgba(237, 237, 237, 0.814);
+}
+.about-me .about-contain .right-text p {
+  line-height: 1.8;
+}
+.about-me .about-contain .right-text span.container {
+  display: grid;
+  grid-template-columns: 33% 33% 33%;
+  padding: 32px 0;
+}
+.about-me .about-contain .right-text span.container span span.num {
+  display: block;
+  color: white;
+}
+.about-me .about-contain .right-text .download a {
+  text-decoration: none;
+  border: 1px solid transparent;
+  padding: 10px;
+  letter-spacing: 1.3px;
+  background: rgba(237, 237, 237, 0.18);
+  border-radius: 5px;
+}
+
+.Compétences .skills-container {
+  text-align: center;
+  margin-top: 90px;
+}
+.Compétences ul {
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-pack: distribute;
+      justify-content: space-around;
+  margin-top: 40px;
+}
+.Compétences ul li {
+  color: rgba(237, 237, 237, 0.814);
+  border: 1px solid transparent;
+  padding: 10px;
+  border-radius: 5px;
+  background: rgba(237, 237, 237, 0.18);
+}
+
+.services .services-container {
+  text-align: center;
+  margin-top: 100px;
+}
+.services .boite {
+  margin: 30px 0;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-pack: justify;
+      justify-content: space-between;
+  gap: 20px;
+}
+.services .boite .menu {
+  width: 80%;
+}
+.services .boite .menu span i {
+  font-size: 2rem;
+  color: white;
+  text-align: center;
+}
+.services .boite .menu h3 {
+  margin: 0px 0 20px 0;
+  color: white;
+  line-height: 1.3;
+}
+.services .boite .menu li {
+  display: none;
+}
+.services .boite .menu li:nth-child(-n+3) {
+  display: list-item;
+}
+.services .boite .menu li p {
+  color: rgba(237, 237, 237, 0.814);
+  line-height: 1.7;
+  letter-spacing: 1px;
+  font-size: 0.9rem;
+}
+.services .boite .toggle-btn {
+  cursor: pointer;
+  display: inline-block;
+  margin-top: 10px;
+  color: white;
+  background: purple;
+  padding: 5px 10px;
+  border-radius: 8px;
+}
+.services .boite #toggle {
+  display: none;
+}
+.services .boite #toggle:checked ~ .menu li {
+  display: list-item;
+}
+.services .boite #toggle:not(:checked) + .toggle-btn::after {
+  content: "Voir plus";
+}
+.services .boite #toggle:checked + .toggle-btn::after {
+  content: "Voir moins";
+}
+.services .boite .boite-container {
+  width: 80%;
+}
+.services .boite .boite-container span i {
+  font-size: 2rem;
+  color: white;
+  text-align: center;
+}
+.services .boite .boite-container h3 {
+  margin: 0px 0 20px 0;
+  color: white;
+  line-height: 1.3;
+}
+.services .boite .boite-container li {
+  padding: 5px 0;
+}
+.services .boite .boite-container li p {
+  color: rgba(237, 237, 237, 0.814);
+  line-height: 1.7;
+  letter-spacing: 1px;
+  font-size: 0.9rem;
+}/*# sourceMappingURL=index.css.map */
