--- a/assets/styles/layouts/_settings.scss
+++ b/assets/styles/layouts/_settings.scss
@@ -1,5 +1,57 @@
+@font-face {
+  font-family: roboto;
+  src: url(../fonts/Roboto-Regular.ttf);
+}
+@font-face {
+  font-family: montserrat;
+  src: url(../fonts/Montserrat-Regular.ttf);
+}
+
 * {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+}
+li {
+  list-style: none;
+}
+
+html {
+  scroll-behavior: smooth;
+}
+//Les couleurs
+$background: rgba(3, 0, 0, 0.86);
+$white1: white;
+$white2: rgba(237, 237, 237, 0.814);
+$white3: rgb(237 237 237 / 18%);
+
+body {
+  background: $background;
+  max-width: 1100px;
+  margin: 0 auto;
+}
+a,
+a:visited {
+  color: $white2;
+}
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  font-family: montserrat, sans-serif;
+}
+p,
+li,
+a {
+  font-family: roboto, sans-serif;
+}
+h2 {
+  letter-spacing: 1.1px;
+  color: $white1;
+  padding-bottom: 10px;
+}
+p {
+  color: $white2;
 }
