--- a/assets/styles/layouts/_settings.scss
+++ b/assets/styles/layouts/_settings.scss
@@ -24,7 +24,7 @@ $background: rgba(3, 0, 0, 0.86);
 $white1: white;
 $white2: rgba(237, 237, 237, 0.814);
 $white3: rgb(237 237 237 / 18%);
-
+$noir: black;
 body {
   background: $background;
   max-width: 1100px;
