--- a/assets/styles/index.css
+++ b/assets/styles/index.css
@@ -57,8 +57,18 @@ p {
   color: rgba(237, 237, 237, 0.814);
 }
 
+html,
+body {
+  overflow-x: hidden;
+}
+
 header {
   height: 100vh;
+}
+@media screen and (max-width: 530px) {
+  header {
+    height: 80vh;
+  }
 }
 header nav nav-container {
   display: -ms-flexbox;
@@ -69,9 +79,35 @@ header nav nav-container {
       align-items: center;
   margin: 30px 0;
 }
+@media screen and (max-width: 1150px) {
+  header nav nav-container {
+    margin: 30px 25px;
+  }
+}
+@media screen and (max-width: 950px) {
+  header nav nav-container {
+    display: block;
+  }
+}
+@media screen and (max-width: 950px) {
+  header nav nav-container {
+    display: grid;
+    grid-template-columns: 40% 60%;
+  }
+}
 header nav nav-container h2 {
   color: white;
   font-size: 1.2rem;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-align: center;
+      align-items: center;
+  -ms-flex-pack: center;
+      justify-content: center;
+  text-align: center;
+  place-self: center;
+  margin: 0 auto;
+  display: block;
 }
 header nav nav-container .right {
   display: -ms-flexbox;
@@ -80,6 +116,16 @@ header nav nav-container .right {
       justify-content: space-around;
   -ms-flex-align: center;
       align-items: center;
+}
+@media screen and (max-width: 950px) {
+  header nav nav-container .right li {
+    display: none;
+  }
+  header nav nav-container .right li:nth-child(3),
+  header nav nav-container .right li:nth-child(5),
+  header nav nav-container .right li#moon {
+    display: block;
+  }
 }
 header nav nav-container .right li {
   padding: 0 20px;
@@ -135,6 +181,35 @@ header nav header-container {
       align-items: center;
   margin-top: 150px;
 }
+@media screen and (max-width: 1150px) {
+  header nav header-container {
+    display: -ms-flexbox;
+    display: flex;
+    -ms-flex-direction: column;
+        flex-direction: column;
+  }
+  header nav header-container .social {
+    display: none;
+  }
+  header nav header-container .presentation {
+    -ms-flex-order: 1;
+        order: 1;
+    text-align: center;
+    margin-bottom: 40px;
+  }
+  header nav header-container .picture {
+    display: none;
+  }
+}
+@media screen and (max-width: 580px) {
+  header nav header-container {
+    margin-top: 50px;
+  }
+}
+header nav header-container .social {
+  -ms-flex-order: 1;
+      order: 1;
+}
 header nav header-container .social ul li {
   padding: 15px 0;
 }
@@ -176,11 +251,15 @@ header nav header-container .social ul li a:hover::before {
   left: 0;
 }
 header nav header-container .picture {
+  -ms-flex-order: 2;
+      order: 2;
   background: url(../img/pexels-olia-danilevich-4974915.webp) center/cover;
   height: 400px;
   border-radius: 10px;
 }
 header nav header-container .presentation {
+  -ms-flex-order: 3;
+      order: 3;
   margin-left: 50px;
   height: 300px;
 }
@@ -190,6 +269,11 @@ header nav header-container .presentation h1 {
   line-height: 1.3;
   font-family: montserrat;
   padding: 20px 0;
+}
+@media screen and (max-width: 1150px) {
+  header nav header-container .presentation h1 {
+    font-size: 3rem;
+  }
 }
 header nav header-container .presentation p {
   color: rgba(237, 237, 237, 0.814);
@@ -255,6 +339,16 @@ header nav .down p i {
   color: #6a11cb;
   animation: bounce 2s infinite;
 }
+@media screen and (max-width: 580px) {
+  header nav .down p {
+    margin-top: 90px;
+  }
+}
+@media screen and (max-width: 530px) {
+  header nav .down p {
+    display: none;
+  }
+}
 @keyframes fadeUp {
   0% {
     opacity: 0.3;
@@ -294,9 +388,19 @@ header nav .down p i {
   grid-template-columns: 40% 60%;
   margin: 20px;
 }
+@media screen and (max-width: 1150px) {
+  .about-me .about-contain {
+    display: block;
+  }
+}
 .about-me .about-contain .left-image {
   background: url(../img/pexels-gabby-k-6373291.webp) center/cover;
   width: 90%;
+}
+@media screen and (max-width: 1150px) {
+  .about-me .about-contain .left-image {
+    display: none;
+  }
 }
 .about-me .about-contain .right-text {
   margin-left: 20px;
@@ -306,14 +410,34 @@ header nav .down p i {
 .about-me .about-contain .right-text p {
   line-height: 1.8;
 }
+@media screen and (max-width: 1150px) {
+  .about-me .about-contain .right-text p {
+    width: 80%;
+    margin: 0 auto;
+  }
+}
 .about-me .about-contain .right-text span.container {
   display: grid;
   grid-template-columns: 33% 33% 33%;
   padding: 32px 0;
 }
+@media screen and (max-width: 1150px) {
+  .about-me .about-contain .right-text span.container {
+    width: 80%;
+    margin: 0 auto;
+    text-align: center;
+  }
+}
 .about-me .about-contain .right-text span.container span span.num {
   display: block;
   color: white;
+}
+@media screen and (max-width: 1150px) {
+  .about-me .about-contain .right-text .download {
+    width: 80%;
+    margin: 0 auto;
+    text-align: center;
+  }
 }
 .about-me .about-contain .right-text .download .btn-download {
   display: -ms-inline-flexbox;
@@ -375,6 +499,11 @@ header nav .down p i {
       flex-wrap: wrap;
   gap: 20px;
 }
+@media screen and (max-width: 980px) {
+  .Compétences .skills {
+    margin: 0 2px;
+  }
+}
 .Compétences .skills li {
   display: -ms-flexbox;
   display: flex;
@@ -421,6 +550,19 @@ header nav .down p i {
   -ms-flex-pack: center;
       justify-content: center;
 }
+@media screen and (max-width: 1162px) {
+  .services .boite {
+    margin: 30px 30px;
+    gap: 5px;
+  }
+}
+@media screen and (max-width: 840px) {
+  .services .boite {
+    display: block;
+    margin: 0 50px;
+    width: 100%;
+  }
+}
 .services .boite .menu {
   width: 80%;
 }
@@ -446,6 +588,9 @@ header nav .down p i {
   letter-spacing: 1px;
   font-size: 0.9rem;
 }
+.services .boite #toggle {
+  display: none;
+}
 .services .boite .toggle-btn {
   cursor: pointer;
   display: inline-block;
@@ -457,20 +602,30 @@ header nav .down p i {
   font-family: roboto;
   font-size: 0.9rem;
 }
-.services .boite #toggle {
+.services .boite .toggle-btn::after {
+  content: "Voir plus";
+}
+.services .boite .menu li:nth-child(n+3) {
   display: none;
 }
-.services .boite #toggle:checked ~ .menu li {
+.services .boite .menu:has(+ #toggle:checked) li {
   display: list-item;
-}
-.services .boite #toggle:not(:checked) + .toggle-btn::after {
-  content: "Voir plus";
 }
 .services .boite #toggle:checked + .toggle-btn::after {
   content: "Voir moins";
 }
 .services .boite .boite-container {
   width: 80%;
+}
+@media screen and (max-width: 1162px) {
+  .services .boite .boite-container {
+    width: 65%;
+  }
+}
+@media screen and (max-width: 840px) {
+  .services .boite .boite-container {
+    margin: 10px 0 50px 0;
+  }
 }
 .services .boite .boite-container span i {
   font-size: 2rem;
@@ -481,6 +636,11 @@ header nav .down p i {
   margin: 0px 0 20px 0;
   color: white;
   line-height: 1.3;
+}
+@media screen and (max-width: 840px) {
+  .services .boite .boite-container h3 {
+    padding-top: 10px;
+  }
 }
 .services .boite .boite-container li {
   padding: 5px 0;
@@ -504,12 +664,60 @@ header nav .down p i {
   grid-template-columns: 33% 33% 33%;
   gap: 40px;
 }
+@media screen and (max-width: 1220px) {
+  .projects .projects-container .project-card-container {
+    gap: 20px;
+    margin: 0 20px;
+  }
+}
+@media screen and (max-width: 1162px) {
+  .projects .projects-container .project-card-container {
+    display: block;
+  }
+}
+@media screen and (max-width: 817px) {
+  .projects .projects-container .project-card-container {
+    place-self: center;
+    width: 80%;
+    margin: 0 auto;
+  }
+}
 .projects .projects-container .project-card-container .card-container {
   position: relative;
+}
+@media screen and (max-width: 1162px) {
+  .projects .projects-container .project-card-container .card-container {
+    margin: 0px auto 30px;
+    display: grid;
+    grid-template-columns: 50% 50%;
+    gap: 10px;
+    height: 250px;
+  }
+}
+@media screen and (max-width: 817px) {
+  .projects .projects-container .project-card-container .card-container {
+    display: block;
+    margin: 0 auto 100px;
+    height: auto;
+  }
+}
+.projects .projects-container .project-card-container .card-container .img-container {
+  place-self: center;
 }
 .projects .projects-container .project-card-container .card-container .img-container img {
   width: 100%;
   border-radius: 5px;
+}
+@media screen and (max-width: 1162px) {
+  .projects .projects-container .project-card-container .card-container .img-container img {
+    width: 100%;
+  }
+}
+@media screen and (max-width: 817px) {
+  .projects .projects-container .project-card-container .card-container .img-container img {
+    width: 70%;
+    margin: 0 auto;
+  }
 }
 .projects .projects-container .project-card-container .card-container .text h3 {
   color: white;
@@ -518,6 +726,11 @@ header nav .down p i {
   letter-spacing: 1px;
   padding-bottom: 15px;
   text-align: left;
+}
+@media screen and (max-width: 840px) {
+  .projects .projects-container .project-card-container .card-container .text h3 {
+    letter-spacing: 0;
+  }
 }
 .projects .projects-container .project-card-container .card-container .text p {
   line-height: 1.9;
@@ -529,6 +742,16 @@ header nav .down p i {
   position: absolute;
   margin: 0 auto;
   bottom: -90px;
+}
+@media screen and (max-width: 1162px) {
+  .projects .projects-container .project-card-container .card-container .text .link {
+    bottom: 0;
+  }
+}
+@media screen and (max-width: 817px) {
+  .projects .projects-container .project-card-container .card-container .text .link {
+    bottom: auto;
+  }
 }
 .projects .projects-container .project-card-container .card-container .text .link .link-container {
   margin: 30px 0;
@@ -784,11 +1007,32 @@ footer footer-container {
   -ms-flex-align: center;
       align-items: center;
 }
+@media screen and (max-width: 1130px) {
+  footer footer-container {
+    margin: 0 20px;
+  }
+}
+@media screen and (max-width: 817px) {
+  footer footer-container {
+    grid-template-columns: 100%;
+  }
+}
+@media screen and (max-width: 817px) {
+  footer footer-container footer-left {
+    display: block;
+    grid-template-columns: 100%;
+  }
+}
 footer footer-container footer-left h3 {
   color: white;
 }
 footer footer-container footer-left p {
   font-size: 0.9rem;
+}
+@media screen and (max-width: 850px) {
+  footer footer-container footer-right {
+    display: none;
+  }
 }
 footer footer-container footer-right ul {
   display: -ms-flexbox;
