--- a/assets/styles/layouts/_competence.scss
+++ b/assets/styles/layouts/_competence.scss
@@ -27,6 +27,10 @@
     flex-wrap: wrap;
     gap: 20px;
 
+    @media screen and (max-width: 980px) {
+      margin: 0 2px;
+    }
+
     li {
       display: flex;
       align-items: center;
