--- a/assets/styles/layouts/_footer.scss
+++ b/assets/styles/layouts/_footer.scss
@@ -17,7 +17,18 @@ footer {
     grid-template-columns: 50% 50%;
     align-items: center;
 
+    @media screen and (max-width: 1130px) {
+      margin: 0 20px;
+    }
+    @media screen and (max-width: 817px) {
+      grid-template-columns: 100%;
+    }
+
     footer-left {
+      @media screen and (max-width: 817px) {
+        display: block;
+        grid-template-columns: 100%;
+      }
       h3 {
         color: $white1;
       }
@@ -26,6 +37,9 @@ footer {
       }
     }
     footer-right {
+      @media screen and (max-width: 850px) {
+        display: none;
+      }
       ul {
         display: flex;
         justify-content: space-around;
