--- a/assets/styles/layouts/_header.scss
+++ b/assets/styles/layouts/_header.scss
@@ -1,20 +1,54 @@
 header {
   height: 100vh;
+  @media screen and (max-width: 530px) {
+    height: 80vh;
+  }
   nav {
     nav-container {
       display: flex;
       justify-content: space-between;
       align-items: center;
+
       margin: 30px 0;
+      @media screen and (max-width: 1150px) {
+        margin: 30px 25px;
+      }
+      @media screen and (max-width: 950px) {
+        display: block;
+      }
+      @media screen and (max-width: 950px) {
+        display: grid;
+        grid-template-columns: 40% 60%;
+      }
 
       h2 {
         color: $white1;
         font-size: 1.2rem;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        text-align: center;
+        place-self: center;
+        margin: 0 auto;
+        display: block;
       }
       .right {
         display: flex;
         justify-content: space-around;
         align-items: center;
+
+        @media screen and (max-width: 950px) {
+          li {
+            display: none; // cacher tout
+          }
+
+          li:nth-child(3), // Compétences
+    li:nth-child(5), // Projets
+    li#moon {
+            // lune
+            display: block; // les garder visibles
+          }
+        }
 
         li {
           padding: 0 20px;
@@ -79,8 +113,28 @@ header {
       grid-template-columns: 10% 40% 50%;
       align-items: center;
       margin-top: 150px;
+      @media screen and (max-width: 1150px) {
+        display: flex;
+        flex-direction: column;
+
+        .social {
+          display: none;
+        }
+        .presentation {
+          order: 1;
+          text-align: center;
+          margin-bottom: 40px;
+        }
+        .picture {
+          display: none;
+        }
+      }
+      @media screen and (max-width: 580px) {
+        margin-top: 50px;
+      }
 
       .social {
+        order: 1; // reste en premier si besoin
         ul {
           li {
             padding: 15px 0;
@@ -128,12 +182,14 @@ header {
         }
       }
       .picture {
+        order: 2;
         background: url(../img/pexels-olia-danilevich-4974915.webp) center/cover;
 
         height: 400px;
         border-radius: 10px;
       }
       .presentation {
+        order: 3;
         margin-left: 50px;
         height: 300px;
         h1 {
@@ -142,6 +198,9 @@ header {
           line-height: 1.3;
           font-family: montserrat;
           padding: 20px 0;
+          @media screen and (max-width: 1150px) {
+            font-size: 3rem;
+          }
         }
         p {
           color: $white2;
@@ -226,6 +285,12 @@ header {
           font-size: 20px;
           color: #6a11cb; // violet qui match avec ton thème
           animation: bounce 2s infinite;
+        }
+        @media screen and (max-width: 580px) {
+          margin-top: 90px;
+        }
+        @media screen and (max-width: 530px) {
+          display: none;
         }
       }
 
