--- a/assets/styles/layouts/_projects.scss
+++ b/assets/styles/layouts/_projects.scss
@@ -8,15 +8,48 @@
     .project-card-container {
       display: grid;
       grid-template-columns: 33% 33% 33%;
-
       gap: 40px;
+      @media screen and (max-width: 1220px) {
+        gap: 20px;
+        margin: 0 20px;
+      }
+      @media screen and (max-width: 1162px) {
+        display: block;
+      }
+      @media screen and (max-width: 817px) {
+        place-self: center;
+        width: 80%;
+        margin: 0 auto;
+      }
 
       .card-container {
         position: relative;
+        @media screen and (max-width: 1162px) {
+          margin: 0px auto 30px;
+          display: grid;
+          grid-template-columns: 50% 50%;
+          gap: 10px;
+
+          height: 250px;
+        }
+        @media screen and (max-width: 817px) {
+          display: block;
+          margin: 0 auto 100px;
+          height: auto;
+        }
         .img-container {
+          place-self: center;
           img {
             width: 100%;
             border-radius: 5px;
+
+            @media screen and (max-width: 1162px) {
+              width: 100%;
+            }
+            @media screen and (max-width: 817px) {
+              width: 70%;
+              margin: 0 auto;
+            }
           }
         }
         .text {
@@ -27,6 +60,9 @@
             letter-spacing: 1px;
             padding-bottom: 15px;
             text-align: left;
+            @media screen and (max-width: 840px) {
+              letter-spacing: 0;
+            }
           }
           p {
             line-height: 1.9;
@@ -41,6 +77,13 @@
 
             // place-self: center;
             bottom: -90px;
+
+            @media screen and (max-width: 1162px) {
+              bottom: 0;
+            }
+            @media screen and (max-width: 817px) {
+              bottom: auto;
+            }
             .link-container {
               margin: 30px 0;
               display: inline-flex;
