--- a/assets/styles/index.css
+++ b/assets/styles/index.css
@@ -67,7 +67,7 @@ header {
 }
 @media screen and (max-width: 530px) {
   header {
-    height: 80vh;
+    height: 60vh;
   }
 }
 header nav nav-container {
@@ -95,6 +95,12 @@ header nav nav-container {
     grid-template-columns: 40% 60%;
   }
 }
+@media screen and (max-width: 500px) {
+  header nav nav-container {
+    display: grid;
+    grid-template-columns: 60% 40%;
+  }
+}
 header nav nav-container h2 {
   color: white;
   font-size: 1.2rem;
@@ -117,7 +123,7 @@ header nav nav-container .right {
   -ms-flex-align: center;
       align-items: center;
 }
-@media screen and (max-width: 950px) {
+@media screen and (min-width: 501px) and (max-width: 950px) {
   header nav nav-container .right li {
     display: none;
   }
@@ -127,15 +133,24 @@ header nav nav-container .right {
     display: block;
   }
 }
-header nav nav-container .right li {
+@media screen and (max-width: 500px) {
+  header nav nav-container .right li {
+    display: none; /* On cache tout */
+  }
+  header nav nav-container .right li:nth-child(5),
+  header nav nav-container .right li#moon {
+    display: block;
+  }
+}
+header nav nav-container li {
   padding: 0 20px;
   position: relative;
 }
-header nav nav-container .right li a {
+header nav nav-container li a {
   text-decoration: none;
   position: relative;
 }
-header nav nav-container .right li a::before, header nav nav-container .right li a::after {
+header nav nav-container li a::before, header nav nav-container li a::after {
   content: "";
   position: absolute;
   left: 0;
@@ -145,36 +160,36 @@ header nav nav-container .right li a::before, header nav nav-container .right li
   transform: scaleX(0);
   transition: transform 0.3s ease;
 }
-header nav nav-container .right li a::before {
+header nav nav-container li a::before {
   top: 0;
   transform-origin: left;
 }
-header nav nav-container .right li a::after {
+header nav nav-container li a::after {
   bottom: 0;
   transform-origin: right;
 }
-header nav nav-container .right li a:hover::before, header nav nav-container .right li a:hover::after {
+header nav nav-container li a:hover::before, header nav nav-container li a:hover::after {
   transform: scaleX(1);
 }
-header nav nav-container .right #moon {
+header nav nav-container #moon {
   cursor: pointer;
   padding: 8px;
   border-radius: 50%;
   transition: all 0.3s ease;
 }
-header nav nav-container .right #moon i {
+header nav nav-container #moon i {
   color: rgba(237, 237, 237, 0.814);
   transition: transform 0.3s ease, color 0.3s ease;
 }
-header nav nav-container .right #moon:hover {
+header nav nav-container #moon:hover {
   background: rgba(255, 255, 255, 0.1);
   box-shadow: 0 0 10px rgba(255, 255, 255, 0.3);
 }
-header nav nav-container .right #moon:hover i {
+header nav nav-container #moon:hover i {
   transform: rotate(20deg) scale(1.2);
   color: #f5d742;
 }
-header nav header-container {
+header header-container {
   display: grid;
   grid-template-columns: 10% 40% 50%;
   -ms-flex-align: center;
@@ -182,38 +197,38 @@ header nav header-container {
   margin-top: 150px;
 }
 @media screen and (max-width: 1150px) {
-  header nav header-container {
+  header header-container {
     display: -ms-flexbox;
     display: flex;
     -ms-flex-direction: column;
         flex-direction: column;
   }
-  header nav header-container .social {
+  header header-container .social {
     display: none;
   }
-  header nav header-container .presentation {
+  header header-container .presentation {
     -ms-flex-order: 1;
         order: 1;
     text-align: center;
     margin-bottom: 40px;
   }
-  header nav header-container .picture {
+  header header-container .picture {
     display: none;
   }
 }
 @media screen and (max-width: 580px) {
-  header nav header-container {
+  header header-container {
     margin-top: 50px;
   }
 }
-header nav header-container .social {
+header header-container .social {
   -ms-flex-order: 1;
       order: 1;
 }
-header nav header-container .social ul li {
+header header-container .social ul li {
   padding: 15px 0;
 }
-header nav header-container .social ul li a {
+header header-container .social ul li a {
   display: -ms-flexbox;
   display: flex;
   -ms-flex-align: center;
@@ -230,12 +245,12 @@ header nav header-container .social ul li a {
   position: relative;
   overflow: hidden;
 }
-header nav header-container .social ul li a:hover {
+header header-container .social ul li a:hover {
   color: #fff;
   transform: translateY(-5px) scale(1.1);
   box-shadow: 0 0 15px rgba(106, 17, 203, 0.6);
 }
-header nav header-container .social ul li a::before {
+header header-container .social ul li a::before {
   content: "";
   position: absolute;
   width: 150%;
@@ -246,24 +261,29 @@ header nav header-container .social ul li a::before {
   transform: rotate(45deg);
   transition: 0.5s;
 }
-header nav header-container .social ul li a:hover::before {
+header header-container .social ul li a:hover::before {
   top: 0;
   left: 0;
 }
-header nav header-container .picture {
+header header-container .picture {
   -ms-flex-order: 2;
       order: 2;
   background: url(../img/pexels-olia-danilevich-4974915.webp) center/cover;
   height: 400px;
   border-radius: 10px;
 }
-header nav header-container .presentation {
+header header-container .presentation {
   -ms-flex-order: 3;
       order: 3;
   margin-left: 50px;
   height: 300px;
 }
-header nav header-container .presentation h1 {
+@media screen and (max-width: 490px) {
+  header header-container .presentation {
+    margin-left: 0px;
+  }
+}
+header header-container .presentation h1 {
   color: white;
   padding-bottom: 10px;
   line-height: 1.3;
@@ -271,22 +291,33 @@ header nav header-container .presentation h1 {
   padding: 20px 0;
 }
 @media screen and (max-width: 1150px) {
-  header nav header-container .presentation h1 {
+  header header-container .presentation h1 {
     font-size: 3rem;
   }
 }
-header nav header-container .presentation p {
+@media screen and (max-width: 600px) {
+  header header-container .presentation h1 {
+    font-size: 2rem;
+  }
+}
+header header-container .presentation p {
   color: rgba(237, 237, 237, 0.814);
   padding-bottom: 10px;
 }
-header nav header-container .presentation .key2 {
+@media screen and (max-width: 490px) {
+  header header-container .presentation p {
+    width: 90%;
+    margin: 0 auto;
+  }
+}
+header header-container .presentation .key2 {
   line-height: 1.5;
   padding-bottom: 40px;
 }
-header nav header-container .presentation .link .link-container {
+header header-container .presentation .link .link-container {
   margin-top: 20px;
 }
-header nav header-container .presentation .link .link-container a {
+header header-container .presentation .link .link-container a {
   text-decoration: none;
   border: 1px solid transparent;
   padding: 10px;
@@ -300,11 +331,11 @@ header nav header-container .presentation .link .link-container a {
   overflow: hidden;
   transition: transform 0.3s ease, box-shadow 0.3s ease;
 }
-header nav header-container .presentation .link .link-container a:hover {
+header header-container .presentation .link .link-container a:hover {
   transform: translateY(-3px);
   box-shadow: 0 8px 20px rgba(106, 17, 203, 0.5);
 }
-header nav header-container .presentation .link .link-container a::before {
+header header-container .presentation .link .link-container a::before {
   content: "";
   position: absolute;
   top: 0;
@@ -315,14 +346,14 @@ header nav header-container .presentation .link .link-container a::before {
   transform: skewX(-45deg);
   transition: left 0.5s ease;
 }
-header nav header-container .presentation .link .link-container a:hover::before {
+header header-container .presentation .link .link-container a:hover::before {
   left: 100%;
 }
-header nav .down {
+header .down {
   text-align: center;
   margin-top: 50px;
 }
-header nav .down p {
+header .down p {
   color: rgba(237, 237, 237, 0.814);
   display: -ms-inline-flexbox;
   display: inline-flex;
@@ -334,18 +365,18 @@ header nav .down p {
   position: relative;
   animation: fadeUp 2s ease-in-out infinite;
 }
-header nav .down p i {
+header .down p i {
   font-size: 20px;
   color: #6a11cb;
   animation: bounce 2s infinite;
 }
 @media screen and (max-width: 580px) {
-  header nav .down p {
+  header .down p {
     margin-top: 90px;
   }
 }
 @media screen and (max-width: 530px) {
-  header nav .down p {
+  header .down p {
     display: none;
   }
 }
@@ -413,6 +444,12 @@ header nav .down p i {
 @media screen and (max-width: 1150px) {
   .about-me .about-contain .right-text p {
     width: 80%;
+    margin: 0 auto;
+  }
+}
+@media screen and (max-width: 460px) {
+  .about-me .about-contain .right-text p {
+    width: 95%;
     margin: 0 auto;
   }
 }
@@ -565,6 +602,11 @@ header nav .down p i {
 }
 .services .boite .menu {
   width: 80%;
+}
+@media screen and (max-width: 750px) {
+  .services .boite .menu {
+    width: 95%;
+  }
 }
 .services .boite .menu span i {
   font-size: 2rem;
@@ -812,6 +854,16 @@ header nav .down p i {
   height: 250px;
   border-radius: 10px;
 }
+@media screen and (max-width: 650px) {
+  .mail .mail-container {
+    grid-template-columns: 100%;
+  }
+}
+@media screen and (max-width: 500px) {
+  .mail .mail-container {
+    height: 300px;
+  }
+}
 .mail .mail-container .left-mail {
   display: -ms-flexbox;
   display: flex;
@@ -820,6 +872,11 @@ header nav .down p i {
   -ms-flex-align: center;
       align-items: center;
   padding: 0 30px;
+}
+@media screen and (max-width: 650px) {
+  .mail .mail-container .left-mail .left-mail-container {
+    text-align: center;
+  }
 }
 .mail .mail-container .left-mail h3 {
   color: white;
@@ -879,9 +936,19 @@ header nav .down p i {
   margin: 15px 20px 25px 0;
   border-radius: 5px;
 }
+@media screen and (max-width: 650px) {
+  .mail .mail-container .right-mail {
+    display: none;
+  }
+}
 
 .testimonial {
   margin-top: 90px;
+}
+@media screen and (max-width: 1050px) {
+  .testimonial {
+    display: none;
+  }
 }
 .testimonial .testimonial-container .testi {
   text-align: center;
@@ -942,8 +1009,19 @@ header nav .down p i {
 .contact-me .contact-me-container .contact {
   text-align: center;
 }
+@media screen and (max-width: 400px) {
+  .contact-me .contact-me-container .contact p {
+    padding: 0 10px;
+  }
+}
 .contact-me .contact-me-container .container {
   margin-bottom: 30px;
+}
+@media screen and (max-width: 800px) {
+  .contact-me .contact-me-container .container {
+    margin-left: 20px;
+    margin-top: 30px;
+  }
 }
 .contact-me .contact-me-container .container .uper .uper-container {
   display: grid;
@@ -1026,8 +1104,30 @@ footer footer-container {
 footer footer-container footer-left h3 {
   color: white;
 }
+@media screen and (max-width: 500px) {
+  footer footer-container footer-left h3 {
+    font-size: 1rem;
+  }
+}
+@media screen and (max-width: 500px) {
+  footer footer-container footer-left h3 {
+    text-align: center;
+    padding-bottom: 15px;
+  }
+}
 footer footer-container footer-left p {
   font-size: 0.9rem;
+}
+@media screen and (max-width: 500px) {
+  footer footer-container footer-left p {
+    font-size: 0.8rem;
+  }
+}
+@media screen and (max-width: 500px) {
+  footer footer-container footer-left p {
+    text-align: center;
+    padding-bottom: 5px;
+  }
 }
 @media screen and (max-width: 850px) {
   footer footer-container footer-right {
